# cc-sessions

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: release.md  updater-testing.md
docs/releases/: v1.0.0.md  v1.0.1.md  v1.0.10.md  v1.0.11.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.0.7.md  v1.0.8.md  v1.0.9.md
scripts/: release.mjs  updater-e2e-local.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  gtd.rs  helpers.rs  lib.rs  main.rs  models.rs  saved.rs  scanner.rs  search_index.rs
src/renderer/: App.tsx  index.css
src/renderer/components/: BatchActions.tsx  Checkbox.tsx  ConversationMessage.tsx  ConversationView.test.tsx  ConversationView.tsx  DetailPanel.tsx  DetailShared.test.tsx  DetailShared.tsx  ErrorBoundary.tsx  MessageContextMenu.tsx  ProjectIcon.tsx  ProviderLogo.tsx  SavedMessageDetail.tsx  SavedMessagesList.tsx  SessionList.tsx  SettingsList.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  Sidebar.tsx  StatsPanel.tsx  Toast.tsx  ui.tsx
src/renderer/hooks/: useAiSettings.ts  useContentSearch.ts  useFilters.test.ts  useFilters.ts  useGTD.ts  useIndexReady.ts  useSavedMessages.ts  useSessions.ts  useStore.ts  useToast.ts
src/renderer/lib/: aiReviewCache.ts  aiSessionContext.ts  i18n.tsx  parseConversation.test.ts  parseConversation.ts  parseConversation.worker.ts  updater.test.ts  updater.ts  utils.test.ts  (+1 more)
(+1 files in other folders)
