[package]
name = "cc-sessions"
version = "1.0.5"
edition = "2021"

[lib]
name = "cc_sessions_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
notify = "6"
tokio = { version = "1", features = ["rt"] }
tantivy = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
reqwest = { version = "0.13", features = ["json", "rustls"] }

[dev-dependencies]
tempfile = "3"
